# orbit

./: .gitignore  AGENTS.md  Makefile  PRD.md  README.md  TODO.md  index.html  package-lock.json  package.json  prd.md  tailwind.config.js
.github/workflows/: build.yml
docs/: blog-xiaohongshu-lite.md  blog-xiaohongshu.md
orbit-app/: project.yml
orbit-app/Orbit/: Orbit-Bridging-Header.h  OrbitApp.swift  OrbitBridge.swift
orbit-app/Orbit.xcodeproj/: project.pbxproj
orbit-app/Orbit/Models/: Models.swift
orbit-app/Orbit/ViewModels/: AppState.swift
orbit-app/Orbit/Views/: CredentialGroupDialog.swift  MainView.swift  MonitorView.swift  ServerDialog.swift  SftpView.swift  SidebarView.swift  TerminalView.swift
orbit-rs/: Cargo.toml  build.rs  cbindgen.toml
orbit-rs/include/: orbit.h
orbit-rs/src/: crypto.rs  ffi.rs  lib.rs  models.rs  sftp.rs  ssh.rs
scripts/: build-rust.sh  release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  db.rs  lib.rs  main.rs  models.rs  monitor.rs  sftp.rs  ssh.rs  transport.rs
src/components/CredentialGroupDialog/: CredentialGroupDialog.tsx
src/components/Monitor/: MonitorPanel.tsx
src/components/ServerDialog/: ServerDialog.tsx
src/components/Sftp/: SftpPanel.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Terminal/: TerminalTab.tsx
src/stores/: useAppStore.ts
src/types/: index.ts
