[package]
name = "orbit"
version = "0.0.3"
description = "Orbit - A lightweight SSH management terminal"
edition = "2021"

[lib]
name = "orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
openssl-sys = { version = "0.9", features = ["vendored"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
gethostname = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
